--- a/screen_capture/manifest.json
+++ b/screen_capture/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "screen capture",
-	"version": "1.0",
-	"description": "screen capture",
+	"name": "rudaks capture",
+	"version": "1.0.8",
+	"description": "화면캡쳐 툴입니다.",
 	"browser_action": {
 		"default_icon": "images/capture.png",
 		"default_popup": "popup.html"
@@ -9,24 +9,42 @@
    "content_scripts": [
     {
       "matches": [ "<all_urls>" ] ,
-      "js": ["js/jquery-1.9.1.min.js", "js/contents-script.js"]
-    }
+      "js": ["js/lib/jquery-1.9.1.min.js", "js/contents-script.js"]
+    },
+    {
+		"matches": ["http://www.google.com/robots.txt*"],
+      	"js": ["js/lib/oauth2/oauth2_inject.js"],
+      	"run_at": "document_start"
+    },
+    {
+      	"all_frames": true,
+      	"js": [ "js/webrtc-script.js" ],
+      	"matches": [ "https://github.com/rudaks-han/rudaks-han.github.io/blob/master/webrtc/*" ]
+   }
   ],
    "background": {
       "page": "background.html"
    },
    "background": {
-		"scripts": ["js/jquery-1.9.1.min.js", "js/background.js"]
+		"scripts": ["js/lib/jquery-1.9.1.min.js",
+								"js/websocket.js",
+								"js/RTCMultiConnection.js",
+								"js/desktop-capturing.js",
+								"js/background.js",
+								"js/selection.inject.js"]
   },
-   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+   "content_security_policy": "script-src https://www.dropbox.com 'unsafe-eval'; object-src 'self'",
 	"icons": {"16": "images/capture.png"},
 	"web_accessible_resources": [
 		"selection.html",
+		"chrome_oauth_receiver.html",
 		"images/number-1.png",
 		"images/number-2.png",
-		"images/number-3.png"
+		"images/number-3.png",
+		"css/bootstrap.css.map"
 	],
+	"offline_enabled": true,
 	"optional_permissions": [ "clipboardWrite" ],
-	"permissions": [ "tabs", "\u003Call_urls>", "storage", "contextMenus" ],
+	"permissions": [ "activeTab", "tabs", "\u003Call_urls>", "storage", "contextMenus", "desktopCapture", "background" ],
 	"manifest_version": 2
 }
